[package]
name = "jrnlvw"
version = "0.1.0"
authors = ["Daniel Herslöf"]
license = "MIT"
homepage = "https://github.com/dherslof/jrnlvw"
repository = "https://github.com/dherslof/jrnlvw"
readme = "readme.md" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.3"
failure = "0.1.7"
